# open-science

./: .gitignore  DOCUMENTATION.md  LEGAL.md  README.md  app.py  cleaned_dois.txt  final_clean_dois.txt  pyproject.toml  requirements.txt  test_arxiv.py  test_arxiv_dois.txt  test_dois.txt
data/: download_progress.json  downloaded_library.txt  extracted_dois.txt  extraction_summary.json  failed_dois.txt  library.txt  stop_download.flag
data/uploads/: ai-open-access.txt
documentation/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCS_INDEX.md  README.md
downloader/: __init__.py
downloader/config/: __init__.py  settings.py
downloader/core/: __init__.py
downloader/core/downloaders/: __init__.py  openaccess.py
downloader/core/extractors/: __init__.py  base.py  bibtex.py  rayyan.py  scopus.py
downloader/utils/: __init__.py  logging.py  validation.py
downloader/web/: __init__.py  app.py  main.py
downloader/web/routes/: __init__.py  api.py  download.py  main.py
downloader/web/static/: style.css
downloader/web/templates/: download.html  extract_bibtex.html  extract_rayyan.html  extract_scopus.html  index.html
portable/macos/: meta-data-sample.bib
portable/macos/builder/: Makefile  README.md  build.sh  build_macos_portable.py  create_installer_dmg.sh  science-ico.icns
portable/macos/portable/: README.txt  launch.sh
portable/windows/builder/: build_windows.py
portable/windows/portable/: README.txt
